--- a/backend/agents/resume_pilot/src/resume_parser/config/tasks.yaml
+++ b/backend/agents/resume_pilot/src/resume_parser/config/tasks.yaml
@@ -28,6 +28,7 @@ link_extraction_task:
     10. **'years_of_experience'**: The total years of professional experience inferred or explicitly mentioned in the resume. If not found or no experience put off 0`.
 
     Ensure all relevant profile links are extracted, and for each, identify the platform and username. Make sure to capture all projects, experience details, CGPA, field of study, name, email, phone number, years of experience, and technical skills present in the resume.
+    In order to get the content of the resume, u are provided with the required tool.
   
   expected_output: |
     A JSON object containing the extracted links, projects, experience, cgpa, field_of_study, technical_skills, name, email, phone, and years_of_experience.
@@ -72,7 +73,6 @@ link_extraction_task:
     ```
     NOTE (VVVVVIMP):
     THE input file is resume.pdf for this task.
-
         ```
   output_file: resume_got_off.json
   agent: link_extractor
