--- a/backend/agents/sql_pilot/pyproject.toml
+++ b/backend/agents/sql_pilot/pyproject.toml
@@ -5,7 +5,7 @@ description = "sql_pilot using crewAI"
 authors = [{ name = "Your Name", email = "you@example.com" }]
 requires-python = ">=3.10,<3.14"
 dependencies = [
-    "crewai[tools]==1.6.1",
+    "crewai[google-genai,tools]==1.6.1",
     "litellm>=1.80.10",
     "pydantic>=2.12.5",
     "supabase>=2.27.0",
